; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sun/extr_cassini.c_cas_mac_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sun/extr_cassini.c_cas_mac_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.cas = type { i32, i32, i32, i64 }

@REG_MAC_CTRL_STATUS = common dso_local global i64 0, align 8
@intr = common dso_local global i32 0, align 4
@KERN_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"mac interrupt, stat: 0x%x\0A\00", align 1
@MAC_CTRL_PAUSE_STATE = common dso_local global i32 0, align 4
@MAC_CTRL_PAUSE_RECEIVED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.cas*, i32)* @cas_mac_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cas_mac_interrupt(%struct.net_device* %0, %struct.cas* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.cas*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store %struct.cas* %1, %struct.cas** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.cas*, %struct.cas** %6, align 8
  %10 = getelementptr inbounds %struct.cas, %struct.cas* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @REG_MAC_CTRL_STATUS, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @readl(i64 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %47

18:                                               ; preds = %3
  %19 = load %struct.cas*, %struct.cas** %6, align 8
  %20 = load i32, i32* @intr, align 4
  %21 = load i32, i32* @KERN_DEBUG, align 4
  %22 = load %struct.cas*, %struct.cas** %6, align 8
  %23 = getelementptr inbounds %struct.cas, %struct.cas* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @netif_printk(%struct.cas* %19, i32 %20, i32 %21, i32 %24, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* @MAC_CTRL_PAUSE_STATE, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %18
  %32 = load %struct.cas*, %struct.cas** %6, align 8
  %33 = getelementptr inbounds %struct.cas, %struct.cas* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %33, align 4
  br label %36

36:                                               ; preds = %31, %18
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* @MAC_CTRL_PAUSE_RECEIVED, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %46

41:                                               ; preds = %36
  %42 = load i32, i32* %8, align 4
  %43 = ashr i32 %42, 16
  %44 = load %struct.cas*, %struct.cas** %6, align 8
  %45 = getelementptr inbounds %struct.cas, %struct.cas* %44, i32 0, i32 0
  store i32 %43, i32* %45, align 8
  br label %46

46:                                               ; preds = %41, %36
  store i32 0, i32* %4, align 4
  br label %47

47:                                               ; preds = %46, %17
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @netif_printk(%struct.cas*, i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
